# mdb-mapper

./: .eleventy.js  .gitignore  CLAUDE.md  LICENSE  README.md  eleventy.config.mjs  eslint.config.js  eslint.config.mjs  mise.toml  package-lock.json  package.json  vite.config.js  vitest.config.js
backlog/: config.yml
backlog/tasks/: task-001 - initialise-repo.md  task-002 - add-real-tiles-to-S3-bucket.md  task-003 - add-linter.md  task-004 - add-this-project-to-GH.md  task-005 - host-on-GitHub-pages.md  task-006 - add-leaflet-tests-which-don't-hit-real-S3-buckets.md  task-007 - refactor-python-scripts-into-single-CLI-tool.md  task-1 - initialise-repo.md  task-2 - add-real-tiles-to-S3-bucket.md  task-3 - add-linter.md  task-4 - add-this-project-to-GH.md  task-5 - host-on-GitHub-pages.md
scripts/: .gitignore  GA-photo-URLs.md  GA-photo-URLs.py  README.md  crop-images.py  example_script.py  image-geolocation.md  image-geolocation.py  pyproject.toml  upload-tiles.js  upload-tiles.sh
scripts/example-metadata/: anu-metadata-example.licence  anu-metadata-example.lines.geojson  anu-metadata-example.points.geojson
scripts/mdb_mapper/: __init__.py  cli.py
scripts/tests/: __init__.py  test_cli.py
src/: about.md  about.njk  index.html  index.njk
src/_layouts/: about.njk  base.njk
src/css/: main.css
src/data/: tile-metadata.json
src/js/: map.js
test/: eleventy.test.js  metadata.test.js
