[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdb_mapper"
version = "0.1.0"
description = "CLI tool for processing MDB mapper images"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mdb_mapper = "mdb_mapper.cli:app"